[package]
name = "dawdle-todo-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.37",features = ["rkyv"]}
clap = "4.5.4"
diesel = { version = "2.1.5", features = ["postgres"] }
dirs = "5.0.1"
lazy-init = "0.5.1"
lazy_static = "1.4.0"
piccolo = "0.3.1"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = {version = "0.8.12"}